# voice-audition

./: .env.example  .gitignore  ARCHITECTURE.md  BUSINESS_STRATEGY.md  LICENSE  MARKET_ANALYSIS.md  PERSONAS_AND_JTBD.md  PRD.md  README.md  index.html  install-skill.sh  pyproject.toml
.claude/skills/voice-audition/: SKILL.md
.github/workflows/: pricing-check.yml  sync-voices.yml
.pricing-snapshot/: cartesia.txt  deepgram.txt  elevenlabs.txt
.superdesign/: design-system.md
.superdesign/brand_styles/apply.threadsurrogacy.com/: brand-guide.json
audition/: __init__.py  acoustic.py  analyze.py  audition.py  costs.py  db.py  embeddings.py  graph.py  index.py  quality.py  schema.py  search.py
catalog/: deepgram.json  elevenlabs.json  hosting.json  openai.json  opensource.json  providers.json  rime.json  schema.json  voice_catalog.db
catalog/voices/: deepgram.json  openai.json  rime.json
cli/: main.py
enrichment/: classify.py  config.py  enrichment.yaml  graph.py  pipeline.py  sync.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: use-queries.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: voice-detail.tsx  voices.tsx
frontend/src/styles/: globals.css
mcp/: server.py
monitor/: status.py
research/: README.md  acoustic_parameters.md  provider_taxonomies.md  self_hosted_tts_guide.md  voice_agent_best_practices.md  voice_perception_psychology.md  voice_quality_standards.md
scripts/: schema.py  sync_all.py  sync_deepgram.py  sync_elevenlabs.py  sync_openai.py  sync_rime.py
server/: package-lock.json  package.json
server/src/: db.ts  index.ts  routes.ts
src/voice_audition/: audition.py  cli.py  costs.py  index.py  mcp_server.py  schema.py  search.py
src/voice_audition/enrich/: __init__.py  classify.py  pipeline.py
src/voice_audition/monitor/: __init__.py  status.py
src/voice_audition/sync/: __init__.py  providers.py
sync/: common.py  search.py  sync.py  sync_all.py  sync_deepgram.py  sync_elevenlabs.py  sync_openai.py  sync_rime.py
tests/: test_analyze_audition_modes.py  test_costs.py  test_db.py  test_enrich_audition.py  test_search_fallback.py  test_sync_providers.py
voice_audition/: api.py  catalog.py  cli.py  engine.py  models.py  pipecat_config.py  search.py
